fixed java 9 deprecated code.