@@ -17,7 +17,7 @@ public class Q16 {
 		
 		long sum = 0;
 		for (int i = 0; i < s.length(); ++i) {
-			sum += new Integer(s.substring(i, i + 1));
+			sum += Integer.valueOf(s.substring(i, i + 1));
 		}
 		return sum;
 	}
